--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-body{
+body {
   text-align: center;
 }
-#theGame{
+#theGame {
   background-color: blue;
   width: 500px;
   height: 500px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   display: grid;
-  grid-template-columns:repeat(7, 14.2857142857%)
+  grid-template-columns: repeat(7, 14.2857142857%);
 }
-.circle{
+.cell {
   background-color: white;
   margin: 5px;
   border-radius: 50%;
 }
-.red{
+.red {
   background-color: red;
 }
 .yellow {
